@@ -1,4 +1,2 @@
-plugin.video.virginradio.it
-==================
-
-Kodi unofficial plugin for Virgin Radio Italia (tested on Kodi 15.2 Isengard).
+# plugin.video.virginradio.it
+Kodi unofficial plugin for Virgin Radio Italia.
