@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.virginradio.it" name="Virgin Radio Italia" version="1.0.6" provider-name="NeverWise">
+<addon id="plugin.video.virginradio.it" name="Virgin Radio Italia" version="1.0.7" provider-name="NeverWise">
   <requires>
     <import addon="xbmc.python" version="2.14.0"/>
-    <import addon="script.module.neverwise" version="1.0.6"/>
+    <import addon="script.module.neverwise" version="1.0.8"/>
+    <import addon="plugin.video.youtube" version="4.4.10" optional="true"/>
   </requires>
   <extension point="xbmc.python.pluginsource" library="default.py">
     <provides>audio video</provides>
